--- a/.github/workflows/conan-gcc.yml
+++ b/.github/workflows/conan-gcc.yml
@@ -38,6 +38,7 @@ jobs:
           sudo pip install -r docs/requirements.txt --upgrade
           sudo apt-get -y install gfortran-${{ matrix.compiler_version }}
           sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-${{ matrix.compiler_version }} 20
+      - name: Workaround pesky gnutls issue emacs
         if: ${{ matrix.compiler_version == 8 }}
         run: |
           sudo apt-get install -y software-properties-common
