Use casadi copysign with MSVC

--- a/.github/workflows/conan-msvc.yml
+++ b/.github/workflows/conan-msvc.yml
@@ -53,7 +53,8 @@ jobs:
             -s build_type=${{ matrix.build_type }} `
             -s compiler.version=${{ matrix.compiler_version }} `
             -o balder:with_doc=${{ matrix.with_doc }} `
+            -o casadi:copysign_undef=True `
             -b missing -b outdated
-          conan upload --all -c -r sintef qt/* --retry 5 --retry-wait 30
+          conan upload --all -c -r sintef casadi/* --retry 5 --retry-wait 30
           conan build ..
           conan package ..
